--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,8 @@
 [package]
-name = "rolling_idx"
+name = "highroller"
 authors = ["orgrinrt", "Hiisi Digital"]
 version = "0.1.0"
 edition = "2021"
-
-[lints]
-workspace = true
 
 [dependencies]
 lazy_static = "1.4.0"
