add `const` and `async` feature flags to allow for const definition and send+sync implementation (this is not very complete yet, but it's a start). release::patch

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name:  'Crate: Merge Main'
+name: 'Crate: Merge Main'
 
 on:
   push:
@@ -21,4 +21,4 @@ jobs:
       force_tests: false
       force_deploy: false
       auto_bump: true
-      test_feature_sets: "test_suite_a, test_suite_b, test_suite_c"
+      test_feature_sets: "test_suite_a, test_suite_b, test_suite_c, test_suite_d"
